@@ -17,7 +17,6 @@ package ghidra.app.util.opinion;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.function.Predicate;
 
 import ghidra.app.util.importer.MessageLog;
 import ghidra.framework.model.*;
@@ -33,7 +32,7 @@ import ghidra.util.task.TaskMonitor;
  * 
  * @param <T> The type of {@link DomainObject}s that were loaded
  */
-public class LoadResults<T extends DomainObject> implements Iterable<Loaded<T>> {
+public class LoadResults<T extends DomainObject> implements Iterable<Loaded<T>>, AutoCloseable {
 
 	private final List<Loaded<T>> loadedList;
 
@@ -60,14 +59,21 @@ public class LoadResults<T extends DomainObject> implements Iterable<Loaded<T>> 
 	 * 
 	 * @param domainObject The loaded {@link DomainObject}
 	 * @param name The name of the loaded {@link DomainObject}.  If a 
-	 *   {@link #save(Project, Object, MessageLog, TaskMonitor) save} occurs, this will attempted to
-	 *   be used for the resulting {@link DomainFile}'s name.
+	 *   {@link #save(TaskMonitor) save} occurs, this will attempted to be used for the resulting 
+	 *   {@link DomainFile}'s name.
+	 * @param project If not null, the project this will get saved to during a 
+	 *   {@link #save(TaskMonitor)} operation
 	 * @param projectFolderPath The project folder path this will get saved to during a 
-	 *   {@link #save(Project, Object, MessageLog, TaskMonitor) save} operation.  If null or empty, 
-	 *   the root project folder will be used.
+	 *   {@link #save(TaskMonitor) save} operation.  If null or empty, the root project folder will
+	 *   be used.
+	 * @param consumer The consumer of the {@code domainObject}, which will get used when this 
+	 *   object is {@link #close() closed}. Wrapping a {@link DomainObject} in a {@link Loaded} 
+	 *   transfers responsibility of releasing the {@link DomainObject} to this 
+	 *   {@link LoadResults}'s {@link #close()} method.
 	 */
-	public LoadResults(T domainObject, String name, String projectFolderPath) {
-		this(List.of(new Loaded<T>(domainObject, name, projectFolderPath)));
+	public LoadResults(T domainObject, String name, Project project, String projectFolderPath,
+			Object consumer) {
+		this(List.of(new Loaded<T>(domainObject, name, project, projectFolderPath, consumer)));
 	}
 
 	/**
@@ -77,17 +83,41 @@ public class LoadResults<T extends DomainObject> implements Iterable<Loaded<T>> 
 	 * @return The "primary" {@link Loaded} {@link DomainObject}
 	 */
 	public Loaded<T> getPrimary() {
-		return loadedList.get(0);
+		return loadedList.getFirst();
 	}
 
 	/**
-	 * Gets the "primary" {@link DomainObject}, who's meaning is defined by each {@link Loader} 
+	 * Removes the "primary" {@link Loaded} {@link DomainObject} from this {@link LoadResults}.
+	 * <p>
+	 * NOTE: It is the responsibility of the caller to {@link Loaded#close()} the returned 
+	 * {@link Loaded} {@link DomainObject} when finished with it. 
+	 * 
+	 * @return The removed "primary" {@link Loaded} {@link DomainObject}
+	 */
+	public Loaded<T> removePrimary() {
+		return loadedList.removeFirst();
+	}
+
+	/**
+	 * Gets the "primary" {@link DomainObject}, whose meaning is defined by each {@link Loader} 
 	 * implementation
 	 * 
+	 * @param consumer The consumer of the returned {@link DomainObject}
 	 * @return The "primary" {@link DomainObject}
 	 */
-	public T getPrimaryDomainObject() {
-		return loadedList.get(0).getDomainObject();
+	public T getPrimaryDomainObject(Object consumer) {
+		return loadedList.getFirst().getDomainObject(consumer);
+	}
+
+	/**
+	 * Gets the {@link DomainObject}s, whose meaning is defined by each {@link Loader} 
+	 * implementation
+	 * 
+	 * @param consumer The consumer of the returned {@link DomainObject}s
+	 * @return The {@link DomainObject}s
+	 */
+	public List<T> getDomainObjects(Object consumer) {
+		return loadedList.stream().map(e -> e.getDomainObject(consumer)).toList();
 	}
 
 	/**
@@ -101,27 +131,24 @@ public class LoadResults<T extends DomainObject> implements Iterable<Loaded<T>> 
 	}
 
 	/**
-	 * {@link Loaded#save(Project, MessageLog, TaskMonitor) Saves} each {@link Loaded} 
-	 * {@link DomainObject} to the given {@link Project}.
+	 * {@link Loaded#save(TaskMonitor) Saves} each {@link Loaded} {@link DomainObject} to the given 
+	 * {@link Project}.
 	 * <p>
 	 * NOTE: If any fail to save, none will be saved (already saved {@link DomainFile}s will be
 	 * cleaned up/deleted), and all {@link Loaded} {@link DomainObject}s will have been
-	 * {@link #release(Object) released}.
+	 * {@link #close() closed}.
 	 * 
-	 * @param project The {@link Project} to save to
-	 * @param consumer the consumer
-	 * @param messageLog The log
 	 * @param monitor A cancelable task monitor
 	 * @throws CancelledException if the operation was cancelled
 	 * @throws IOException If there was a problem saving
-	 * @see Loaded#save(Project, MessageLog, TaskMonitor)
+	 * @see Loaded#save(TaskMonitor)
 	 */
-	public void save(Project project, Object consumer, MessageLog messageLog, TaskMonitor monitor)
+	public void save(TaskMonitor monitor)
 			throws CancelledException, IOException {
 		boolean success = false;
 		try {
 			for (Loaded<T> loaded : loadedList) {
-				loaded.save(project, messageLog, monitor);
+				loaded.save(monitor);
 			}
 			success = true;
 		}
@@ -129,10 +156,9 @@ public class LoadResults<T extends DomainObject> implements Iterable<Loaded<T>> 
 			if (!success) {
 				for (Loaded<T> loaded : this) {
 					try {
-						loaded.release(consumer);
-						loaded.deleteSavedDomainFile(consumer);
+						loaded.closeAndDelete();
 					}
-					catch (IOException e1) {
+					catch (Exception e1) {
 						Msg.error(getClass(), "Failed to delete: " + loaded);
 					}
 				}
@@ -140,47 +166,13 @@ public class LoadResults<T extends DomainObject> implements Iterable<Loaded<T>> 
 		}
 	}
 
-	/**
-	 * Notify all of the {@link Loaded} {@link DomainObject}s that the specified consumer is no 
-	 * longer using them. When the last consumer invokes this method, the {@link Loaded} 
-	 * {@link DomainObject}s will be closed and will become invalid.
-	 * 
-	 * @param consumer the consumer
-	 */
-	public void release(Object consumer) {
-		loadedList.forEach(loaded -> loaded.release(consumer));
-	}
-
-	/**
-	 * Notify the filtered {@link Loaded} {@link DomainObject}s that the specified consumer is no 
-	 * longer using them. When the last consumer invokes this method, the filtered {@link Loaded} 
-	 * {@link DomainObject}s will be closed and will become invalid.
-	 * 
-	 * @param consumer the consumer
-	 * @param filter a filter to apply to the {@link Loaded} {@link DomainObject}s prior to the
-	 *   release
-	 */
-	public void release(Object consumer, Predicate<? super Loaded<T>> filter) {
-		loadedList.stream().filter(filter).forEach(loaded -> loaded.release(consumer));
-	}
-
-	/**
-	 * Notify the non-primary {@link Loaded} {@link DomainObject}s that the specified consumer is no 
-	 * longer using them. When the last consumer invokes this method, the non-primary {@link Loaded} 
-	 * {@link DomainObject}s will be closed and will become invalid.
-	 * 
-	 * @param consumer the consumer
-	 */
-	public void releaseNonPrimary(Object consumer) {
-		for (int i = 0; i < loadedList.size(); i++) {
-			if (i > 0) {
-				loadedList.get(i).release(consumer);
-			}
-		}
-	}
-
 	@Override
 	public Iterator<Loaded<T>> iterator() {
 		return loadedList.iterator();
+	}
+
+	@Override
+	public void close() {
+		loadedList.forEach(Loaded::close);
 	}
 }
